--- a/src/components/BigCategory.module.css
+++ b/src/components/BigCategory.module.css
@@ -13,6 +13,16 @@
   position: relative;
 }
 
+.sectionTitle {
+  font-size: 24px;
+  font-weight: 700;
+  margin-bottom: 24px;
+  text-align: center;
+  letter-spacing: 0.5;
+  color: #222;
+  text-transform: uppercase;
+}
+
 .categoriesGrid {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
