--- a/src/components/SubscribeSection.module.css
+++ b/src/components/SubscribeSection.module.css
@@ -3,7 +3,16 @@
   margin: 40px auto;
   padding: 40px 24px;
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
   align-items: center;
-  gap: 120px;
+  gap: 40px;
+} 
+
+@media (min-width: 768px) {
+  .subscribeSection {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 120px;
+  }
 } 
