Update: общие Улучшения

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -74,5 +74,11 @@ section {
 
 /* Отступ для контента под header */
 main {
-  padding-top: 30px;
+  padding-top: 0;
+}
+
+@media (max-width: 768px) {
+  main {
+    padding-top: 30px;
+  }
 }
